--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<h1>Hello woed</h1>
-<h2>I me cat</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>me</title>
+</head>
+<body>
+  <div class="box">
+    <h1>hello</h1>
+    <h2>I my cat</h2>
+    <h3>i</h3>
+  </div>
+</body>
+</html>
