--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>me</title>
+  <style>
+  .box{
+    width: 500px;
+    height: 500px;
+    background-color: #ccc;
+  }
+  </style>
 </head>
 <body>
   <div class="box">
