--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   .box{
     width: 500px;
     height: 600px;
-    background-color: #ccc;
-
+  }
+  h1{
+    color: #ccc;
   }
   </style>
 </head>
