--- a/index.html
+++ b/index.html
@@ -1,35 +1,149 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>me</title>
-  <style>
-  .box{
-    width: 500px;
-    height: 600px;
-<<<<<<< HEAD
-  }
-  h1{
-    color: red;
-  }
-  h2{
-    color: blue;
-=======
-    background-color: #ccc;
->>>>>>> ba758dace175dce3c4bb0fb217983e02a35e5b01
-  }
-  h3{
-    color: green;
-  }
-  </style>
+	<meta charset="UTF-8">
+	<title>left</title>
+	<style type="text/css">
+	*{border: 0;margin: 0;padding:0;}
+	.warp{width: 1440px;height: 1052px;}
+	  .head{width: 1440px;height: 667px;}
+	  .top{width: 1152px;height: 105px;
+	  	   border-bottom: 3px solid #003b5f;
+	  	   margin: 0 auto;}
+	    .logo{width: 132px;height: 105px;
+	    	background-image: url('images/aokema01_03.jpg');
+	    	background-repeat: no-repeat;
+	    	background-position: center;
+	    	float: left;}
+	    .nav{float: left
+	    	;margin-left: 50px;}
+	    .nav ul{list-style: none;}
+	    .nav ul li{
+	    	float: left;line-height: 91px;
+	    	border-left: 2px solid #e8e8e8;
+	    	text-align: center}
+	    .nav ul li a{text-decoration: none;
+	    	width: 115px;height: 105px;
+	    	display: block;
+	    	font-size: 16px;color: #2473a4;;}
+	    .nav li a:hover{background-image: url('images/jb.jpg');color: #666;}
+	    .starch{width: 226px;height: 62px;
+	    	float: right;background-image: url('images/starch_06.jpg');
+	    	background-repeat: no-repeat;
+	    	margin-top: 43px;}
+	    .banner{width: 1440px;height: 599px;}
+	   .main{width: 1152px;height: 343px;
+	   	     border-top: 1px solid #fff;
+	   	     margin: 0 auto;background-image: url('images/yy_07.jpg');
+	   	     background-repeat: repeat-x;}
+	   	  .mainleft,.main-mid,.mainright{margin-top: 26px;}
+	     .mainleft{width: 316px;height: 317px;float: left;}
+	     h1{font-size: 16px;font-family: "微软雅黑";font-weight: normal;}
+	     .mainleft p{line-height: 22px;}
+	     .mainleft p a{font-size: 14px;text-decoration: none;color: #555;}
+	     .content img{float: left;}
+	     .ford{margin-top: 33px;}
+	     .main-mid{width: 413px;height: 317px;float: left;}
+	     .main-mid ul li{line-height: 24px;list-style: none;}
+	     .main-mid
+
+
+
+
+
+	     .mainright{width: 412px;height: 317px;}
+	     .win{margin-bottom: 16px;}
+
+
+	     .footer{width: 1153px;height: 44px;
+	     	     border-top: 2px solid #ececec;
+	     	     border-bottom: 2px solid #ececec;
+	     	     margin: 0 auto; }
+	     .link ul{list-style: none;line-height: 38px;}
+
+	     .link ul li{float: left;}
+	     .link ul li a{text-decoration: none;
+	     	           font-size: 12px;color:#959595; }
+	     .copyright p{float: right;font-size: 12px;
+	     	          color:#959595;line-height: 38px;}
+
+
+
+
+	</style>
+
 </head>
 <body>
-  <div class="box">
-    <h1>hello</h1>
-    <h2>I my cat</h2>
-    <h3>i</h3>
-  </div>
+	<div class="warp">
+		<div class="head">
+			<div class="top">
+				<div class="logo"></div>
+				<div class="nav">
+					<ul>
+						<li><a href="">首页</a></li>
+						<li><a href="">产品中心</a></li>
+						<li><a href="">关于澳柯玛</a></li>
+						<li><a href="">购车支持</a></li>
+						<li><a href="">活动中心</a></li>
+						<li><a href="">人才招聘</a></li>
+					</ul>
+				</div>
+				<div class="starch"></div>
+			</div>
+			<div class="banner"><img src="images/bannen_02.jpg" alt=""></div>
+		</div>
+		<div class="main">
+			<div class="mainleft">
+				<h1>集团简介</h1>
+				<div class="content"><img src="images/left_07.jpg" alt="">
+					<p>
+						<b><a href="">澳柯玛股份有限公司</a></b>
+						<a href="">澳柯玛是全球知名的制冷设备供应商，是全球制冷家电，环保电动车和生活家电领先制造商之一<br>...</a>
+						<a href="">more》</a>
+					</p>
+				</div>
+				<div class="ford"><img src="images/ford_06.jpg" alt=""></div>
+			</div>
+			<div class="main-mid">
+				<h1>新闻中心</h1>
+				<ul>
+					<li>
+						<b><a href="">澳柯玛两项最新冰箱技术达到国际先进水平</a></b></li>
+							<li><a href="">								由中国轻工业联合会组织并主持召开了澳柯玛完成的“云智能WiFi物联技术在冰箱产品上的应用...”</a></li>
+
+							<li><b>
+								<a href="">澳柯玛电动车牵手宋庆龄基金会濮阳助学</a>
+							</b></li>
+
+				    	   <li><a href="">澳柯玛电动车牵手宋庆龄基金会在河南濮阳开展了“全城换购，情系濮阳”的大型公益捐资助学活动...<br></a></li>
+				    	<li><a href="">查看更多》</a>
+				    </li>
+				</ul>
+			</div>
+			<div class="mainright">
+				<div class="win"><img src="images/win_03.jpg" alt=""></div>
+				<div class="global"><img src="images/global_08.jpg" alt=""></div>
+			</div>
+		</div>
+		<div class="footer">
+			<div class="link">
+				<ul>
+						<li><a href="">联系我们</a></li>
+						<li>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</li>
+					    <li><a href="">网站地图</a></li>
+					    <li>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</li>
+					    <li><a href="">法律政策</a></li>
+					    <li>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</li>
+					    <li><a href="">隐私权限</a></li>
+
+				</ul>
+			</div>
+			<div class="copyright">
+				<p>Copyrighi @ 2010 CHINA澳柯玛ALL Right Rsesrved</p>
+			</div>
+		</div>
+	</div>
+
+
 </body>
 </html>
