--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	  	   border-bottom: 3px solid #003b5f;
 	  	   margin: 0 auto;}
 	    .logo{width: 132px;height: 105px;
-	    	background-image: url('images/aokema01_03.jpg');
 	    	background-repeat: no-repeat;
 	    	background-position: center;
 	    	float: left;}
@@ -25,10 +24,8 @@
 	    .nav ul li a{text-decoration: none;
 	    	width: 115px;height: 105px;
 	    	display: block;
-	    	font-size: 16px;color: #2473a4;;}
-	    .nav li a:hover{background-image: url('images/jb.jpg');color: #666;}
+	    	font-size: 16px;color: #2473a4;}
 	    .starch{width: 226px;height: 62px;
-	    	float: right;background-image: url('images/starch_06.jpg');
 	    	background-repeat: no-repeat;
 	    	margin-top: 43px;}
 	    .banner{width: 1440px;height: 599px;}
@@ -90,19 +87,19 @@
 				</div>
 				<div class="starch"></div>
 			</div>
-			<div class="banner"><img src="images/bannen_02.jpg" alt=""></div>
+			<div class="banner"></div>
 		</div>
 		<div class="main">
 			<div class="mainleft">
 				<h1>集团简介</h1>
-				<div class="content"><img src="images/left_07.jpg" alt="">
+				<div class="content">
 					<p>
 						<b><a href="">澳柯玛股份有限公司</a></b>
 						<a href="">澳柯玛是全球知名的制冷设备供应商，是全球制冷家电，环保电动车和生活家电领先制造商之一<br>...</a>
 						<a href="">more》</a>
 					</p>
 				</div>
-				<div class="ford"><img src="images/ford_06.jpg" alt=""></div>
+				<div class="ford"></div>
 			</div>
 			<div class="main-mid">
 				<h1>新闻中心</h1>
@@ -121,8 +118,8 @@
 				</ul>
 			</div>
 			<div class="mainright">
-				<div class="win"><img src="images/win_03.jpg" alt=""></div>
-				<div class="global"><img src="images/global_08.jpg" alt=""></div>
+				<div class="win"></div>
+				<div class="global"></div>
 			</div>
 		</div>
 		<div class="footer">
