--- a/mozan/shopping2.html
+++ b/mozan/shopping2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Advance booking</title>
+	<title>Advance booking0</title>
 	<link rel="stylesheet" type="text/css" href="css/shopping2.css">
 	<link rel="stylesheet" type="text/css" href="css/top.css">
 	<link rel="stylesheet" type="text/css" href="css/footer.css">
@@ -71,7 +71,7 @@
 							<a href="shopping1.html">去购物车结算</a>
 						</div>
 				</div>
-	
+
 			</div>
 			<div class="main_down">
 				<div class="down_a clearfix">
@@ -123,7 +123,7 @@
 			</div>
 		</div>
 	</section>
-	<footer>	
+	<footer>
 		<div class="footerup">
 			<div class="footerup_on clearfix">
 				<div class="clearfix">
@@ -155,7 +155,7 @@
 					 	<li><a href="#"><svg class="icon" aria-hidden="true">
 						  <use xlink:href="#icon-youqinglianjie1"></use>
 						</svg> <span>友情链接</span></a></li>
-					 </ul> 
+					 </ul>
 				</div>
 				<div>
 					<h2>关注我们</h2>
@@ -196,7 +196,7 @@
 				</p>
 			</div>
 		</div>
-		
+
 	</footer>
 
 </div>
