--- a/OrderFilling.html
+++ b/OrderFilling.html
@@ -45,17 +45,24 @@
 			</div>
 			<div class='splice'>
 				<p>是否同意拼房：</p>
-				<input type="radio" checked="cecked" name="sel" id="yesOne" style='width: .2rem;height: .2rem;'>
-				<p>同意</p>
+				<div>
+					<input type="radio" checked="cecked" name="sel" id="yesOne" style='width: .2rem;height: .2rem;'>
+				    <p>同意</p>
+				</div>
+				
 			</div>
-			<div>
-				<input type="radio" name="sel" id="noOne" style="width: .2rem;height:.2rem;">
-				<p class="chajia">不同意拼房,愿意支付房差费用￥<span>3500</span></p>
+			<div class="splice">
+				<div>
+					<p></p>
+					<input type="radio" name="sel" id="noOne" style="width: .2rem;height:.2rem;">
+				     <p class="chajia">不同意拼房,愿意支付房差费用￥<span>3500</span></p>
+				</div>
+				
 			</div>
 		</div>
 		<div class='cost'>
 			<div>
-					<img src="images/triangle_3.png" alt="">
+				<img src="images/triangle_3.png" alt="">
 				<h3>费用说明</h3>
 				<h3>退订规则</h3>
 			</div>
