--- a/TeamDetails.html
+++ b/TeamDetails.html
@@ -50,9 +50,9 @@
 		<div class="m-top">
 			<span class='trabecula'></span>
 			<div class="top-up">
-				<p>行程特色</p>
-				<p>行程简介</p>
-				<p>预订须知</p>
+				<p><a href="javascript:void(0)">行程特色</a></p>
+				<p><a href="javascript:void(0)">行程简介</a></p>
+				<p><a href="javascript:void(0)">预订须知</a></p>
 			</div>
 		</div>
 		<div class="m-center">
