--- a/OrderFilling.html
+++ b/OrderFilling.html
@@ -111,7 +111,7 @@
 				<p><span>*</span>姓名：</p>
 				<input type="text" placeholder="必填" id='username-a'>
 			</div>
-			<div>
+			<div class="zhengjian">
 				<p><span>*</span>证件类型：</p>
 				<button>身份证 ∨</button>
 				<ul>
